--- a/index.html
+++ b/index.html
@@ -276,10 +276,9 @@
       
      <p>This Commission will greatly increase the speed and efficiency with which we can address the quality of life crisis, compared to relying exclusively on the slow processes of a parliament that lacks the expertise for technical matters. It also means that parliament can direct the Quality of Life Commission to implement policies that require ongoing regulatory involvement such as the following:</p>
 
-     <h4 id="3.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free
-     <br>
-       <small>(3.0_Resource_Pricing)</small>
-      </h4>
+     <h4 id="3.0_Resource_Pricing">Stop giving our resource wealth away (almost) for free<br>
+      <small>(3.0_Resource_Pricing)</small>
+     </h4>
 
      <p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. Ideally, the Quality of Life Commission would directly charge whatever price maximises benefits for South Australians, but this may require constitutional reform. Until then, the Quality of Life Commission will instead recommend minimum resource prices to parliament, both for existing mines and separately as the reserve price when selling resources for new mines at auction. These resource sales will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
@@ -304,13 +303,13 @@
      <p>We've all heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money. Most of us recognise this as an injustice, and it also incentivises investors owning a huge number of investment properties. To solve this we can:</p>
 
      <h4 id="6.1_Right_To_Reside">Charge landlords if they don't rent or sell to the rightful resident<br>
-<small>(6.1_Right_To_Reside)</small>
-</h4>             
+      <small>(6.1_Right_To_Reside)</small>
+     </h4>             
      <p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be used by the person or family with the greatest moral right to the property. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this, and will determine the rate of these variable charges to ensure a fair price.</p>
 
      <h4 id="6.2_Rightful_Resident_Loans">Provide HECS-style loans to assist the rightful resident at a regulated price<br>
-<small>(6.2_Rightful_Resident_Loans)</small>
-</h4>
+      <small>(6.2_Rightful_Resident_Loans)</small>
+     </h4>
 
      <p>Once the above policies are implemented, we can assist all long-term renters to buy their residence, and keep family homes in the family where desired, by allowing HECS-style loans for the buyer.</p>
      <p>My policies will prevent this from inflating housing prices further for two reasons:</p>
@@ -326,14 +325,14 @@
      <h3>Underemployment and immigration</h3>
 
      <h4 id="7.0_SAEC">Create a South Australian government employment service<br>
-<small>(7.0_SAEC)</small>
-</h4>
+      <small>(7.0_SAEC)</small>
+     </h4>
 
      <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from the Quality of Life Commission's charges, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
 
      <h4 id="8.0_Reduce_Immigration">Reduce net immigration without reducing the refugee intake<br>
-<small>(8.0_Reduce_Immigration)</small>
-</h4>
+      <small>(8.0_Reduce_Immigration)</small>
+     </h4>
 
      <p>Support reducing the rate of immigration while opposing racism, opposing the mistreatment of immigrants and opposing reduction in the refugee intake.</p>
 
@@ -355,8 +354,8 @@
      </ul>
 
      <h4 id="9.0_Better_Housing">Build housing the right way<br>
-<small>(9.0_Better_Housing)</small>
-</h4>
+      <small>(9.0_Better_Housing)</small>
+     </h4>
 
      <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
 
@@ -364,8 +363,8 @@
      </h3>
 
      <h4 id="10.0_Better_Care">Provide abundant, high quality aged care and at-home urgent care<br>
-<small>(10.0_Better_Care)</small>
-</h4>
+      <small>(10.0_Better_Care)</small>
+     </h4>
 
      <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
      <ul>
@@ -376,8 +375,8 @@
      <p>The Quality of Life Commission will pay for the above with measures such as Policy 3.0 above.</p>
 
      <h4 id="11.0_More_EDs">Increase the number of hospitals, emergency departments and staff. Reopen the Blackwood Hospital and the Repat emergency department<br>
-<small>(11.0_More_EDs)</small>
-</h4>
+      <small>(11.0_More_EDs)</small>
+     </h4>
 
      <p>Increase not only the size of emergency departments and hospitals, but also the number of them, the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
      
@@ -394,8 +393,8 @@
      <h3>Policing</h3>
 
       <h4 id="12.0_Police_Support">Solve the police staffing crisis<br>
-<small>(12.0_Police_Support)</small>
-</h4>
+      <small>(12.0_Police_Support)</small>
+     </h4>
 
       <p>Provide funding to create a new unarmed, plain-clothed position called a Police Support Officer to support SAPOL in their work, and hire at least 200 people for this position. Provide funding for the police to improve their hiring processes with better objective testing of applicants and better job performance assessment processes, and for experts at our universities to carry out helpful studies into better hiring procedures.</p>
 
@@ -403,8 +402,8 @@
      </h3>
 
       <h4 id="13.0_Algae_Solution">Solve the algae crisis, and the pollution crises that are causing it<br>
-<small>(13.0_Algae_Solution)</small>
-</h4>
+       <small>(13.0_Algae_Solution)</small>
+      </h4>
 
       <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I am working on a video explaining this policy in more detail, which I plan to release by December 18 at the latest.</p>
 
