new business districts

--- a/index.html
+++ b/index.html
@@ -359,12 +359,14 @@
 
      <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
 
+     <p>In order to reduce commute times, we should also investigate the possibility of creating new business districts at the far outskirts of our suburbs, for example on the northern outskirts of Adelaide.</p>
+
      <h3>Hospitals, aged care and urgent care
      </h3>
 
      <h4 id="10.0_Better_Care">Provide abundant, high quality aged care and at-home urgent care<br>
       <small>(10.0_Better_Care)</small>
-     </h4>
+     
 
      <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
      <ul>
