--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <h2>My plan</h2>
     <p>Hi. I'm Alec Gargett and I have a plan to:</p>
     <ul>
-     <li>Solve the cost of living crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
+     <li>Solve the cost of living crisis and the housing crisis while protecting and improving our quality of life, our environment, the beauty of our city and our suburbs, and our public services;</li>
      <li>Solve the algae crisis and stop corporations and the government from contributing to the pollution crises that are causing it;</li>
      <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
      <li>Solve the underemployment crisis: ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
