quality of life, quality of housing and population

--- a/index.html
+++ b/index.html
@@ -147,7 +147,19 @@
 <section id="qualityoflifecrisis" class="content-section responsive-width">
      <h2>The Quality of Life Crisis</h2>
 
-     <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis. Reducing the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. For this reason, my policies address not only the cost of living crisis but all of the other crises listed above.</p>
+     <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis.</p>
+
+     <p>With technology improving, quality of life should be improving too. Instead, we are seeing a decline in quality of life, at least when it comes to the quality of housing that people are living in.</p>
+
+     <p>There are two main reasons we are seeing a decline in the quality of housing:</p>
+
+     <ul>
+      <li>A widening wealth gap. Technological advances are making decamillionaires richer, including property investors, while others are getting poorer in real terms with each generation.</li>
+      <li>A rapidly increasing population in our couintry and in our cities. A constantly increasingly population in a city necessarily means people have to live on smaller and smaller properties, or live further and further from the ground, or live further and further from the city centre, and in practice we see all three happening, with smaller gardens or no garden and less views of nature. An increasing population also necessarily means a smaller amount of land and other natural resources per capita.</li>
+     </ul>
+
+     <p>Reducing the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. For this reason, my policies address not only the cost of living crisis but all of the other crises listed above.</p>
+
 </section>
      
 <section id="howtopay" class="content-section responsive-width">
