--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
      <li>Solve the algae crisis and stop corporations and the government from contributing to the pollution crises that are causing it;</li>
      <li>Solve the health care crisis, including the ramping crisis, and the aged care crisis;</li>
      <li>Solve the underemployment crisis: ensure that every Australian is not only adequately trained, but also supported with job placements that make the best use of their skills, talent and knowledge;</li>
-     <li>Solve the corruption crisis, the parliamentary inefficiency crisis, and the accountability crisis: deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
+     <li>Solve the corruption and accountability crisis and the parliamentary inefficiency crisis: deliver integrity, transparency and competence in politics and a stronger, more democratic system, where politicians serve and represent their communities and pursue the interests of their electorate, not a separate agenda of a political party or corporations;</li>
      <li>Solve the police staffing crisis;</li>
      <li>Protect our children, women and men from unfair treatment and harm, including from gambling ads and other advertising. Within the limits of our political system, I'll do what I can to protect everyone from injustice.</li>
     </ul>
@@ -145,27 +145,36 @@
     </section>
 
 <section id="qualityoflifecrisis" class="content-section responsive-width">
-     <h2>The Quality of Life Crisis</h2>
+     <h2>Quality of Life Crisis</h2>
 
-     <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis.</p>
+     <p>All of the crises I mentioned above, including the cost of living crisis, together cause an even bigger and more fundamental crisis: the quality of life crisis. Attempting to reduce the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. For this reason, my policies address not only the cost of living crisis but all of the other crises listed above.</p>
+
+     <h2>The Housing Crisis</h2>
+
+     <p>The housing crisis is not just a housing price crisis. There are three main aspects to the housing crisis:</p>
+     <ul>
+      <li>High prices: Prices are high and continuing to rise</li>
+      <li>Low quality: Average quality is continuing to get worse with the construction of low quality dwellings and the destruction of higher quality homes</li>
+      <li>Disregard for sentimental value: Renters and others are repeatedly being forced to move out of their own homes or communities so that wealthier people can own those homes instead or have them demolished</li>
+     </ul>
 
      <p>With technology improving, quality of life should be improving too. Instead, we are seeing a decline in quality of life, at least when it comes to the quality of housing that people are living in.</p>
 
      <p>There are two main reasons we are seeing a decline in the quality of housing:</p>
 
      <ul>
-      <li>A widening wealth gap. Technological advances are making decamillionaires richer, including property investors, while others are getting poorer in real terms with each generation.</li>
-      <li>A rapidly increasing population in our couintry and in our cities. A constantly increasingly population in a city necessarily means people have to live on smaller and smaller properties, or live further and further from the ground, or live further and further from the city centre, and in practice we see all three happening, with smaller gardens or no garden and less views of nature. An increasing population also necessarily means a smaller amount of land and other natural resources per capita.</li>
+      <li>A widening wealth gap. Technological advances are making decamillionaires richer, including property investors, while others are getting poorer in real terms with each generation, which means more people renting, fewer people owning, and far fewer people living in the place they have the most sentimental attachment to.</li>
+      <li>A rapidly increasing population in our country and in our cities due to high immigration rates. An increasing population in a city, necessarily means people have to live on smaller and smaller properties on average, or live further and further from the ground on average, or live further and further from the city centre; and in practice it results in all three happening, with smaller gardens or no garden and less views of nature. And since we aren't building new business districts on the far outskirts of our cities and adequate public transport, this also means longer and longer average commute times. An increasing population also necessarily means a smaller amount of land and other natural resources per capita, which is the under-appreciated foundation of real wealth. This also means less surplus natural resources available for solving these problems in other ways, like building new business districts on the far outskirts of our cities. There are reasons why we no longer build new cities in Australia, and it's partly due to the massive decline in natural resources available per capita.</li>
      </ul>
 
-     <p>Reducing the cost of living by reducing our quality of life is not a real solution, since fundamentally the main crisis we are trying to solve when we address cost of living is a quality of life crisis. For this reason, my policies address not only the cost of living crisis but all of the other crises listed above.</p>
+     <p>Other political parties are all failing to develop a complete solution by failing to address both of the above. In fact, especially given both factors above are interrelated, our political parties haven't even been properly addressing either. My own plan is the only plan I've seen that even attempts to adequately address both factors.</p>
 
 </section>
      
 <section id="howtopay" class="content-section responsive-width">
      <h2>How will we pay for this?</h2>
 
-     <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations operating major export industries from South Australia with large profit margins that can afford to pay. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
+     <p>Solving every major crisis we are facing will cost money. We need to build more hospitals and aged care, create more emergency departments, hire police support officers, expand the Pharmaceutical Benefits Scheme to include non-pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations with large profit margins that can afford to pay, along with hundreds, perhaps thousands, of decamillionaires and wealthy visitors. We also don't charge enough for our finite natural resources such as minerals. South Australia has more money coming in from minerals (per capita) than Victoria, New South Wales or Tasmania. These sources provide us with an ample base to generate revenue without taxing ordinary South Australians. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
 </section>
 
 <section id="policy" class="content-section responsive-width">
@@ -371,15 +380,15 @@
 
      <p>The above policies may be enough to solve the housing affordability crisis, but we also need to improve the quality of housing that people can afford by building the right type of high-quality housing in the right locations, instead of destroying the beauty of our existing suburbs and wasting land on the outskirts with a lack of proper planning. With all of the above policies, we won't need to sacrifice our quality of life to reduce the cost of living any longer. We can replace ugly buildings with beautiful ones, instead of replacing beautiful buildings and gardens with ugly ones, and we can plan new land releases better to use the land more efficiently with higher quality housing with a wide variety of densities, along with adequate space for new hospitals and other necessary amenities and infrastructure.</p>
 
-     <p>In order to reduce commute times, we should also investigate the possibility of creating new business districts at the far outskirts of our suburbs, for example on the northern outskirts of Adelaide.</p>
+     <p>In order to reduce commute times, we should also investigate the possibility of creating new business districts at the far outskirts of our suburbs, for example, beyond the northern outskirts of Adelaide's suburbs.</p>
 
      <h3>Hospitals, aged care and urgent care
      </h3>
 
      <h4 id="10.0_Better_Care">Provide abundant, high quality aged care and at-home urgent care<br>
       <small>(10.0_Better_Care)</small>
+     </h4>
      
-
      <p>To improve quality of life and reduce the burden on our hospital system we can:</p>
      <ul>
       <li>10.1 Build government-owned aged care centres to ensure adequate supply of high quality care at affordable prices</li>
