--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above problems can be solved with an adequate plan and enough people supporting it. <!-- Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything. --></p> 
     <p>In fact, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
     <ul>
-     <li>Ensure that anyone who wants to work in policy development is allowed to do so, and paid fairly if they want pay.</li>
+     <li>Ensure that anyone who wants to work in policy development is allowed fair involvement, and paid fairly if they want pay.</li>
     </ul>
 
     <p>In other words, if enough competent experts and enough other competent people were adequately paid to solve our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to hold policy makers accountable.</p>
