--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
      <li>Ensure that anyone who wants to work in policy development is allowed fair involvement, and paid fairly if they want pay.</li>
     </ul>
 
-    <p>In other words, if enough competent experts and enough other competent people were adequately paid to solve our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to hold policy makers accountable.</p>
+    <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to hold policy makers accountable.</p>
 
     <p>I have policy suggestions of my own for solving all of the crises above, described in detail below for those who are interested in the details, but fundamentally voting for me is about sending a message.</p>
     
