--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above problems can be solved with an adequate plan and enough people supporting it. <!-- Politicians just aren't really trying to solve them. Their skills are in campaigning and not policy, and think they will get paid just as much, or more, if they don't do the necessary policy work to solve anything. --></p> 
     <p>In fact, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
     <ul>
-     <li>Ensure that anyone who wants to work in policy development is allowed fair involvement, and paid fairly if they want pay.</li>
+     <li>Ensure that any well-meaning person who wants to work in policy development is allowed fair involvement, and paid fairly if they want pay.</li>
     </ul>
 
     <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to hold policy makers accountable.</p>
@@ -362,7 +362,7 @@
 
      <p>Provide government-supported apprenticeships and job placements for all unemployed and underemployed Australians who want them by creating a South Australian government employment service. Expert in the field, David O'Halloran, PhD, recommends creating government employment services at the state level rather than at the federal level. Currently we have neither. The existing private services are inadequate. With the support of the funding from the Quality of Life Commission's charges, the South Australian government employment service will ensure that everyone has the support they need to do the work that will most benefit South Australians, and that businesses that need support to help with this will be given that support.</p>
 
-     <li>Ultimately, anyone everyone who wants to work in policy development in a democracy should be allowed to do so, and paid fairly if they want pay. Pay level above the minimum award rate and maximum hours should initially be proportionate to objective skills testing, and later that salary should be added to with bonuses based on democratic review and peer review of the quality their contributions, and their quantity of contribution to implemented policies. No one should be denied the right to be involved with policy development in a democracy, and no one should be denied the right to adequate pay for such work.</li>
+     <li>Ultimately, every well-meaning person who wants to work in policy development in a democracy should be allowed fair involvement, and paid fairly if they want pay. Pay level above the minimum award rate and maximum hours should initially be proportionate to objective skills testing, and later that salary should be added to with bonuses based on democratic review and peer review of the quality their contributions, and their quantity of contribution to implemented policies. No one should be denied the right to be involved with policy development in a democracy, and no one should be denied the right to adequate pay for such work.</li>
 
      <h4 id="8.0_Reduce_Immigration">Reduce net immigration without reducing the refugee intake<br>
       <small>(8.0_Reduce_Immigration)</small>
