--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
                   <li><a href="#17.4_Address_End">End the requirement for political candidates to put an exact address</a> (17.4)</li>
               </ul>
           </li>
-<!--           <li>
-              <a href="#18.0_"></a>
-          </li> -->
+          <li>
+              <a href="#18.0_Support_Artists">More local music in local businesses and fair pay for the recording artists</a>
+          </li>
           <li>
               <a href="#19.0_Environmental_Health">Prevent harm to public wellbeing</a>
               <ul class="sub-toc-list">
@@ -493,11 +493,20 @@
 
       <p>The job of a politician in our lower house is to serve and represent their electorate. The most important aspect of this is to pursue and prioritise policies that align with the agenda of the electorate, and not to pursue any other agenda. None of our major political parties recognise this as the foundational principle of their constitution, and for at least the last 80 years or so, it seems that political parties have prevented the accountability of politicians to their electorate more than they have held politicians accountable. Getting more independents into parliament is the first step towards solving this problem, especially independents who are committed to their democratic duties to their electorate.</p>
 
-<!--       <h4 id="18.0_"><br>
-       <small></small>
+      <h4 id="18.0_Support_Artists">Support South Australian artists<br>
+       <small>(18.0_Support_Artists)</small>
       </h4>
       
-      <p></p> -->
+      <p>South Australians benefit from a strong local arts scene, and it's not a strong as it could be because not all artists are fairly paid. Even very popular artists are often not quite popular enough to make a good living. I will support the local arts scene in whatever way I can and try to ensure that all South Australian artists are fairly paid based on the quality, quantity and popularity of their work, with adequate government funding to artists.</p>
+      
+      <p>It's especially difficult for recording artists to get fairly paid these days because cheap streaming services compete with each other and with music piracy. To address this I propose the following solutions:</p>
+
+      <ul>
+       <li>18.1 Require that a minimum percentage of recorded music played at businesses such as shops, pubs and bars be South Australian music, say every second song or every third song and ensure that local artists who need support are paid fairly based on how much they get played and how much support they need.</li>
+       <li>18.2 Require venues to send their playlists in to a government department, so that local artists that need support can be paid a fair percentage of both the licensing fees and the government funding based on how often their music is played.</li>
+       <li>18.3 Make licensing fees proportional to what a business can afford to pay. For example, businesses with high profit margins will pay more, while charity shops won't have to pay at all play recorded music, but are still required to send their playlists in so that the South Australian artists can be compensated by the government for their music being played.</li>
+       <li>18.4 Lobby the federal government and foreign governments to regulate minimum compensation by streaming services for artists played on streaming services, above what they are currently paid.</li>
+      </ul>
 
       <h3>Public wellbeing and preventing violence</h3>
 
