--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
- <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I am working on a video explaining this policy in more detail, which I plan to release by December 18 at the latest.</p>
+ <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I will update this section today.</p>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/PL7x9pn-KOQ" title="Part 2 on Adelaide's algae crisis. Part 3 will go over my own policies on this in detail." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
