--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
          <a href="#18.0_Support_Artists">Ensure more local music in local businesses and fair pay for the recording artists</a>
      </li>
      <li>
-         <a href="#19.0_Environmental_Health">Prevent harm to public wellbeing</a>
+         <a href="#19.0_Wellbeing">Prevent harm to public wellbeing</a>
          <ul class="sub-toc-list">
               <li><a href="#19.1_Right_To_Housing">Ensure adequate emergency housing for the homeless and for victims of domestic violence</a> (19.1)</li>
               <li><a href="#19.2_Domestic_Violence">Support other services for victims of domestic violence</a> (19.2)</li>
@@ -444,11 +444,21 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
   <small>(13.0_Algae_Solution)</small>
  </h4>
 
-<iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
  <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
- <p><!-- Tax exports that are contributing to the crisis. Use this money to help businesses reduce their pollution and reduce pollution caused by the government. While we can't solve the climate crisis by ourselves, we can do much more to tackle the pollution crises here in South Australia, and have an influence on the rest of the country, and thereby on the rest of the world. --> I will update this section today.</p>
+ <p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is not independent from other departments. It is part of the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since objective research will not always favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has have a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
+
+ <p>We need to:</p>
+ <ul>
+  <li>Make SARDI independent from PIRSA and other government departments</li>
+  <li>Replace the current head of SARDI, Mike Steer, who has close ties to the farming industry, with someone who does not have close ties to industry and who will commuinicate honestly about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
+  <li>Require SARDI to quantify all major sources of nutrient pollution in the gulf and investigate solutions. Such solutions may include:
+   <ul>
+    <li>Purify Adelaide's sewage water (like Perth do) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
+    <li>Measure the contribution of our industries to pollution and tax them for that pollution. Parliament could regulate the local sale of related products to gurantee supply of these products continues at a fair price for locals;</li>
+    <li>Lead the world in reducing atmospheric pollution contributing to higher temperatures from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
+   </ul>
+ </ul>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/PL7x9pn-KOQ" title="Part 2 on Adelaide's algae crisis. Part 3 will go over my own policies on this in detail." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -521,8 +531,8 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
 
  <h3>Public wellbeing and preventing violence</h3>
 
- <h4 id="19.0_Environmental_Health">Prevent harm to public wellbeing<br>
-  <small>(19.0_Environmental_Health)</small>
+ <h4 id="19.0_Wellbeing">Prevent harm to public wellbeing<br>
+  <small>(19.0_Wellbeing)</small>
  </h4>
 
  <p>I will generally support any measure to prevent harm to public wellbeing, including the following:</p>
