--- a/index.html
+++ b/index.html
@@ -446,16 +446,16 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
- <p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is not independent from other departments. It is part of the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since objective research will not always favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has have a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
+ <p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is not independent from other departments. It is part of the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since objective research will not always favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
 
  <p>We need to:</p>
  <ul>
   <li>Make SARDI independent from PIRSA and other government departments</li>
-  <li>Replace the current head of SARDI, Mike Steer, who has close ties to the farming industry, with someone who does not have close ties to industry and who will commuinicate honestly about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
+  <li>Replace the current head of SARDI, Mike Steer, who has close ties to the farming industry, with someone who does not have close ties to industry and who will communicate honestly about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
   <li>Require SARDI to quantify all major sources of nutrient pollution in the gulf and investigate solutions. Such solutions may include:
    <ul>
     <li>Purify Adelaide's sewage water (like Perth do) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
-    <li>Measure the contribution of our industries to pollution and tax them for that pollution. Parliament could regulate the local sale of related products to gurantee supply of these products continues at a fair price for locals;</li>
+    <li>Measure the contribution of our industries to pollution and tax them for that pollution. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals;</li>
     <li>Lead the world in reducing atmospheric pollution contributing to higher temperatures from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
    </ul>
  </ul>
@@ -470,7 +470,7 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
 
  <p>14.2 Provide much higher frequency and higher quality public transport and workplace policies that reduce commuting at rush hour. Greatly increase the frequency of bus services with a new electric bus fleet. Make every second bus on each route free. Introduce more bus lanes to bypass traffic. A higher frequency of public transport services will not only reduce traffic congestion, but also reduce overcrowding on the buses, trains and trams themselves.</p>
 
- <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created.</p>
+ <p>14.3 Reduce agricultural emissions by taxing the export of slaughterhouse products according to the total pollution created. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals</p>
 
  <p>14.4 Make it easier to buy an EV:</p>
  <ul>
