--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
   <li>Replace the current head of SARDI, Mike Steer, who has close ties to the farming industry, with someone who does not have close ties to industry and who will communicate honestly about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
   <li>Require SARDI to quantify all major sources of nutrient pollution in the gulf and investigate solutions. Such solutions may include:
    <ul>
-    <li>Purify Adelaide's sewage water (like Perth do) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
+    <li>Purify Adelaide's sewage water (like Perth does) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
     <li>Measure the contribution of our industries to pollution and tax them for that pollution. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals;</li>
     <li>Lead the world in reducing atmospheric pollution contributing to higher temperatures from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
    </ul>
