--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
              <li><a href="#17.2_Spending_Cap">Tighten the cap on candidate spending</a> (17.2)</li>
              <li><a href="#17.3_Campaigning_Ban">Ban political campaigning at polling booths</a> (17.3)</li>
              <li><a href="#17.4_Address_End">End the requirement for some political candidates to publish their private home address</a> (17.4)</li>
+             <li><a href="17.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government (17.5)</li>
          </ul>
      </li>
      <li>
@@ -386,7 +387,6 @@
  <li>Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here, as explained above</li>
  <li>Reduce or cease state government requests for skilled visas from the federal government</li>
  <li>Use the platform of state parliament to call on the federal government to further reduce unnecessary visas</li>
- <li>Regulate the entry of skilled visa holders into South Australia specifically</li>
 </ul>
 
 <h4 id="9.0_Better_Housing">Build housing the right way<br>
@@ -507,7 +507,7 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
   <li id="17.2_Spending_Cap">17.2 Tighten the cap on candidate spending. Although large political donations have been banned, wealthy or otherwise well-resourced candidates can still spend up to $100 000 on their campaign during the expenditure period alone, and as much as they like outside the expenditure period, while other candidates may not be able to afford spending even $10 000. This creates an unfair disadvantage for less wealthy candidates, and even some of the wealthier candidates might prefer to spend less than $100 000 on the condition that none of their opponents is spending more than they are. Since the upfront advance funding for new candidates is $5000, the default statewide cap should be lowered to $10 000 per candidate in the pre-election period, with candidates having the right to negotiate a different cap for their electorate between $5000 and $100 000 if the majority of candidates in that electorate agree to it. There should also be a cap introduced for total expenditure in the years outside the pre-election period.</li>
   <li id="17.3_Campaigning_Ban">17.3 Ban political campaigning at polling booths. It's annoying, and it creates further bias towards candidates with more resources.</li>
   <li id="17.4_Address_End">17.4 End the requirement for political candidates to put an exact address on their political materials. This is unfair on candidates who don't have an office, since they currently would have to put their exact home address on all materials including on the internet. PO Boxes aren't currently allowed as the address, and even this probably shouldn't be a requirement in the days of the internet and email. In situations where it's obvious who authorised the content, eg. it is posted on an official account online, the "Authorised by" message should not be required at all.</li>
-  <li id="17.5_Electorate_statistics">17.5 Provide the South Australian branch of the ABS with enough funding to gather and publish scientific data on what each South Australian state electorate wants from government. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
+  <li id="17.5_Electorate_statistics">17.5 Provide the South Australian branch of the ABS with enough funding to gather and publish data on what each South Australian state electorate wants from government. Without this data, our democracy cannot function as intended: politicians are not accountable, and politicians who want to be accountable do not have the data they need to best serve their community.</li>
   <!-- <li>17.X Hold council elections on the same day as state elections in order to increase council voting and thereby increase accountability of local councils. Allow candidates to run for multiple positions (but not multiple wards/electorates), such as mayor and MP, but only accept one of the positions if they win more than one. Due to our preferential voting system, votes can easily be redistributed if a candidate wins more than one position and has to turn one down.</li> -->
  </ul>
 
