--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
  <h2>How will we pay for this?</h2>
 
  <p>Solving every major crisis we are facing will cost money. We need to build and staff more hospitals and aged care facilities, hire more community nurses, create more emergency departments, hire police support officers, provide loans to people for efficiency upgrades and electrification of their homes, perhaps develop something similar to the Pharmaceutical Benefits Scheme for non-pharmaceutical essentials, and more, all detailed below. Luckily we have big corporations with large profit margins that can afford to pay, along with hundreds, perhaps thousands, of decamillionaires and wealthy visitors. We also don't charge corporations and other countries enough for our finite natural resources such as minerals. South Australia has more money coming in from minerals (per capita) than Victoria, New South Wales or Tasmania. These sources and other large export industries provide us with an ample base to generate revenue while reducing costs for ordinary South Australians.</p>
- <p>However, Western Australia exports far more of our finite natural resources than any other state, so ideally we also want the federal government to tax these exports, and provide states with the funding we need to solve the crises we are facing. Unlike most other politicians, I have the independence necessary to use state parliament as a platform to call on the federal government for the funding we desperately need.</p>
- <p>In the meantime, we need to tax our own exports in order to fund the solutions to the crises locally. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
+ <p>However, Western Australia exports far more of our finite natural resources than any other state, so ideally we also want the federal government to charge for these resources, and provide states with the funding we need to solve the crises we are facing. Unlike most other politicians, I have the independence necessary to use state parliament as a platform to call on the federal government for the funding we desperately need.</p>
+ <p>In the meantime, we need to charge for our own export resources in order to fund the solutions to the crises locally. You can read more about this in Policy 3.0 and in the article "Paying for good policy" underneath the policy section.</p>
 </section>
 
 <section id="policy" class="content-section responsive-width">
@@ -340,7 +340,7 @@
 <h4 id="6.1_Right_To_Reside">Charge landlords if they don't rent or sell to the rightful resident<br>
  <small>(6.1_Right_To_Reside)</small>
 </h4>             
-<p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be used by the person or family with the greatest moral right to the property. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this, and will determine the rate of these variable charges to ensure a fair price.</p>
+<p>Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be rented or purchased by the person or family with the greatest moral right to the property at a fair price. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this.</p>
 
 <h4 id="6.2_Rightful_Resident_Loans">Provide HECS-style loans to assist the rightful resident at a regulated price<br>
  <small>(6.2_Rightful_Resident_Loans)</small>
@@ -350,7 +350,7 @@
 <p>My policies will prevent this from inflating housing prices further for two reasons:</p>
  <ul>
   <li>Firstly, the HECS-style loan will only be exactly the size necessary to allow the buyer to make up the difference in their buying power to a fair price, and only the prospective buyer with the greatest moral right to purchase will get access to this loan;</li>
-  <li>Secondly, due to Policy 6.1 above, the property investor will be incentivised to sell to the rightful owner at this target price, rather than sell to someone else. The Quality of Life Commission will adjust such charges on property investors by whatever amount needed to achieve a sale at a fair price.</li>
+  <li>Secondly, due to Policy 6.1 above, the property investor will be incentivised to sell to the rightful owner at this target price, rather than sell to someone else. The Quality of Life Commission will determine a system for determining the fair price.</li>
  </ul>
 
 <!-- <h4>Housing price growth limit</h4>
@@ -455,14 +455,14 @@ Reopen the Blackwood Hospital and the Repat emergency department<br>
   <li>Require SARDI to quantify all major sources of nutrient pollution in the gulf and investigate solutions. Such solutions may include:
    <ul>
     <li>Purify Adelaide's sewage water (like Perth does) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
-    <li>Measure the contribution of our industries to pollution and tax them for that pollution. Parliament or the Quality of Life Commission could regulate the local sale of related products to guarantee supply of these products continues at a fair price for locals;</li>
-    <li>Lead the world in reducing atmospheric pollution contributing to higher temperatures from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
+    <li>Measure the contribution of our industries to pollution and incentivise them to switch to methods or industries that cause less pollution;</li>
+    <li>Lead the world in reducing climate crisis pollution from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
    </ul>
  </ul>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/PL7x9pn-KOQ" title="Part 2 on Adelaide's algae crisis. Part 3 will go over my own policies on this in detail." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
- <h4 id="14.0_Clean_Air">Reduce traffic congestion, air pollution and atmospheric pollution<br>
+ <h4 id="14.0_Clean_Air">Reduce traffic congestion, air pollution and climate crisis pollution<br>
   <small>(14.0_Clean_Air)</small>
  </h4>
 
